--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,11 @@ server {
 
     # API proxy to backend service (internal docker-compose network)
     location /api {
-        proxy_pass http://backend:3001;
+        # Use Docker DNS resolver to handle dynamic upstreams and avoid startup crashes
+        resolver 127.0.0.11 valid=30s;
+        set $upstream_backend "http://backend:3001";
+
+        proxy_pass $upstream_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
