--- a/nginx.conf
+++ b/nginx.conf
@@ -35,9 +35,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # WebSocket support (if needed for future features)
+        # WebSocket support
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    # Serve uploads via backend (since volumes are attached to backend)
+    location /uploads {
+        resolver 127.0.0.11 valid=30s;
+        set $upstream_uploads "http://backend:3001";
+        proxy_pass $upstream_uploads;
     }
 
     # Cache static assets
