--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "connect-pg-simple": "^10.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/connect-pg-simple": "^7.0.3",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-session": "^1.17.10",
