--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
+        "@types/compression": "^1.8.1",
         "bcryptjs": "^2.4.3",
+        "compression": "^1.8.1",
         "connect-pg-simple": "^10.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
